# ohte-harjoitustyo

./: .gitignore  README.md
dokumentaatio/: tuntikirjanpito.md
flashcards/: .env  pyproject.toml  tasks.py
flashcards/dokumentaatio/: arkkitehtuuri.md  changelog.md  kayttoohje.md  testaus.md  tuntikirjanpito.md  vaatimusmaarittely.md
flashcards/src/: config.py  database_connection.py  index.py  initialize_database.py  util.py
flashcards/src/entities/: collection.py  flashcard.py  user.py
flashcards/src/repositories/: collection_repository.py  flashcard_repository.py  user_repository.py
flashcards/src/services/: flashcard_service.py
flashcards/src/tests/repositories/: collection_repository_test.py  flashcard_repository_test.py  user_repository_test.py
flashcards/src/tests/services/: flashcard_service_collection_test.py  flashcard_service_test.py
flashcards/src/ui/: collections_view.py  flashcards_view.py  login_view.py  practice_view.py  public_collections_view.py  register_view.py  results_view.py  ui.py
laskarit/viikko1/: gitlog.txt  komentorivi.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
viikko3/: monopolikaavio.md  sekvenssikaavio.md
