[tool.poetry]
name = "flashcards"
version = "0.1.0"
description = "Ohte-kurssin harjoitustyö"
authors = ["Cherrybowl <81250492+Cherrybowll@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest-dotenv = "^0.5.2"
pytest = "^8.3.3"
coverage = "^7.6.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
